add_executable(ds_week2_build_heap week2/build_heap.cpp)
add_executable(ds_week2_job_queue week2/job_queue.cpp)
add_executable(ds_week2_mering_tables week2/merging_tables.cpp)

add_executable(ds_week3_phone_book week3/phone_book.cpp)
add_executable(ds_week3_hash_chains week3/hash_chains.cpp)
add_executable(ds_week3_hash_substrings week3/hash_substring.cpp)
add_executable(ds_week3_common_substrings week3/common_substring.cpp)
add_executable(ds_week3_matching_with_mismatches week3/matching_with_mismatches.cpp)

add_executable(ds_week4_tree_orders week4/tree-orders.cpp)
add_executable(ds_week4_is_bst week4/is_bst.cpp)
add_executable(ds_week4_is_bst_hard week4/is_bst_hard.cpp)
