add_executable(week1_reachability week1/reachability.cpp)
add_executable(week1_connected_components week1/connected_components.cpp)

add_executable(week2_acyclicity week2/acyclicity.cpp)
add_executable(week2_topsort week2/topsort.cpp)
add_executable(week2_strongly_connect_components week2/strongly_connected.cpp)

add_executable(week4_dijkstra week4/dijkstra.cpp)
add_executable(week4_negative_cycle week4/negative_cycle.cpp)
add_executable(week4_shortest_paths week4/shortest_paths.cpp)

